// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionsPage should match snapshot, when items are empties 1`] = `
<div>
  <div
    class="fr-col-12 fr-col-md-6"
  >
    <div
      class="fr-col-12"
    >
      <h1>
        any-sandbox_title
      </h1>
    </div>
    <div
      class="fr-col-12"
    >
      <div>
        TileComponent
      </div>
    </div>
    <div
      class="fr-col-12"
    >
      <div>
        TileComponent
      </div>
    </div>
  </div>
</div>
`;

exports[`VersionsPage should match snapshot, when items are not empties 1`] = `
<div>
  <div
    class="fr-col-12 fr-col-md-6"
  >
    <div
      class="fr-col-12"
    >
      <h1>
        any-sandbox_title
      </h1>
    </div>
    <div
      class="fr-col-12"
    >
      <div
        data-mockid="CreateButton"
      />
    </div>
    <div
      class="fr-col-12"
    >
      <div
        data-mockid="VersionsListComponent"
      />
    </div>
    <div
      class="fr-col-12"
    >
      <div>
        TileComponent
      </div>
    </div>
  </div>
</div>
`;
